# github-truth-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: EXAMPLES.md
gte/: __init__.py  analyzer.py  cli.py  prompts.py  roaster.py
