[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "github-truth-engine"
version = "0.1.0"
description = "AI-powered roast bot for GitHub repositories"
readme = "README.md"
authors = [
    {name = "Boris Letic"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "PyGithub>=2.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gte = "gte.cli:cli"

[project.urls]
Homepage = "https://github.com/borisletic/github-truth-engine"
Repository = "https://github.com/borisletic/github-truth-engine"
